--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -7,7 +7,6 @@
     "register": "register",
     "REGISTER": "REGISTER",
     "Password": "Password",
-
     "Explore nearby": "Explore nearby",
     "Filter": "Filter",
     "Show All": "Show All",
@@ -34,14 +33,12 @@
     "Inbox": "Inbox",
     "Profile": "Profile",
     "Hello ": "Hello",
-
     "forget password": "forget password",
     "login with": "login with",
     "Please input your email!": "Please input your email!",
     "Input your email/phone number": "Input your email/phone number",
     "Plese login to booking room.thank you": "Plese login to booking room.thank you",
     "Plese login to comment.thank you": "Plese login to comment.thank you",
-
     "Please input your Email!": "Please input your Email!",
     "Please input your password!": "Please input your password!",
     "Please input your username!": "Please input your username!",
@@ -52,7 +49,6 @@
     "Phone Number": "Phone Number",
     "+84 Phone Number": "+84 Phone Number",
     "Full name": "Full name",
-
     "Any Location": "Any Location",
     "Any Week": "Any Week",
     "Add Guest": "Add Guest",
@@ -63,7 +59,6 @@
     "House for rent": "House for rent",
     "Organize the experience": "Organize the experience",
     "Help": "Help",
-
     "Price range": "Price range",
     "Min price": "Min price",
     "Max price": "Max price",
@@ -210,7 +205,7 @@
     "MoonLight": "MoonLight",
     "WaterFall": "WaterFall",
     "River": "River",
-    "Desert": "Desert",
+    "Sea": "Beaches",
     "Peace": "Peace",
     "Tropical": "Tropical",
     "River Side": "River Side",
@@ -227,5 +222,6 @@
     "guests": "guests",
     "Age": "Age",
     "kilometers away": "kilometers away",
-    "Manager" : "Manager"
+    "Manager": "Manager",
+    "Date": "Date"
 }
