--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -231,5 +231,8 @@
     "USER_GENDER": "Gender:",
     "USER_ACTIVE": "Active:",
     "USER_ADDRESS": "Address:",
-    "profile": "Profile"
+    "profile": "Profile",
+    "room": "Room",
+    "start": "Start day:",
+    "end": "End day:"
 }
