--- a/src/i18n/locales/vn.json
+++ b/src/i18n/locales/vn.json
@@ -271,5 +271,8 @@
     "USER_ADDRESS": "Địa chỉ nhà:",
     "GENDER_MALE": "MALE",
     "GENDER_FEMALE": "FEMALE",
-    "profile": "Thông tin"
+    "profile": "Thông tin",
+    "room": "Phòng",
+    "start": "Ngày bắt đầu:",
+    "end": "Ngày kết thúc:"
 }
