--- a/src/i18n/locales/vn.json
+++ b/src/i18n/locales/vn.json
@@ -271,5 +271,6 @@
     "USER_ADDRESS": "Địa chỉ nhà:",
     "GENDER_MALE": "MALE",
     "GENDER_FEMALE": "FEMALE",
-    "profile": "Thông tin"
+    "profile": "Thông tin",
+    "night": "đêm"
 }
