Thêm trang host và cập nhập quyền owner thành công

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -232,5 +232,7 @@
     "USER_ACTIVE": "Active:",
     "USER_ADDRESS": "Address:",
     "profile": "Profile",
-    "night": "night"
+    "night": "night",
+    "Host_label": "Ready to Airbnb it?",
+    "Host_setup": "Become an host"
 }
